--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,15 @@
 .h_t{
 	font-size:48px;
 }
+p{
+	font-size:30px;
+	font-weight:bold;
+	margin-top:-30px
+}
 .btn{
-	font-size:35px;
+	font-size:30px;
 	width:150px;
-	height:45px;
+	height:50px;
 	border-radius:20%;
 	background-color:orangered;
 	color:white;
